--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
+    "react-hook-form": "^7.45.0-next.1",
     "react-native": "0.71.8",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.9.0",
